--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,11 @@
-
+{
+  "display_name": "AutoBGM",
+  "loading_order": 220,
+  "requires": [],
+  "optional": [],
+  "js": "index.js",
+  "css": "style.css",
+  "author": "GgangMyChaeng",
+  "version": "1.0.0",
+  "homePage": "https://github.com/GgangMyChaeng/AutoBGM"
+}
